# e3nn-eform

./: .gitignore  01-query-mp.ipynb  03-train-jax-e3nn.ipynb  LICENSE  README.md  mp-api-key.txt  requirements.txt  setup.cfg
data/models/: v1.pkl  v2.pkl
data/mp-query/: atomic_number_mapping.json  test_division.json  test_paths.json  train_paths.json
src/eform/dataset/: __init__.py  crystalnetwork.py
src/eform/nn/: basis.py  embedding.py
src/eform/nn/conv/: e3nn_nequip_interaction.py
src/eform/nn/models/: e3nn_nequip.py  simplenetwork.py
workflow/: 01-visualize-input.py
