[metadata]
name = eform
version = 0.0.1
author = Peiwen Ren
author_email = rpw199912j@gmail.com
description = A library for predicting crystal formation energy with e3nn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rpw199912j/e3nn-eform

[option]
package_dir=
    =src
packages=find:
python_requires = >= 3.9
install_requires =
    torch>=2.0.1
    torch-geometric>=2.3.1

[options.packages.find]
where=src